Added function to handle comma format, control `0` and `.` behavior, reformat `*`, `/` as `x` and `÷`

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -40,6 +40,11 @@ header {
   // background: $bg-input1;
   text-align: right;
   // color: $white;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  .calculator-display {
+    overflow-x: scroll;
+  }
 }
 
 .calculator-btns {
